# data_projects

./: .gitignore  CLAUDE.md  Case_Turnover_Final.ipynb  README.md  rebuild_project.py  setup_local.sh
crypto_advisor/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
crypto_advisor/.devcontainer/: devcontainer.json  post-create.sh
crypto_advisor/docs/: architecture.md  user-stories.md
crypto_advisor/docs/adrs/: ADR-001-mercado-bitcoin.md  ADR-002-claude-sonnet.md  ADR-003-pandas-ta.md  ADR-004-sqlite.md  ADR-005-tax-optimization.md  ADR-006-telegram-bot.md
crypto_advisor/scripts/: smoke_test.py
crypto_advisor/src/crypto_advisor/: __init__.py  __main__.py  advisor.py  models.py  scheduler.py
crypto_advisor/tests/: conftest.py  test_asset_selector.py  test_binance_client.py  test_coingecko.py  test_income_strategy.py  test_mb_client.py  test_performance_tracker.py  test_portfolio_reader.py  test_prompt_builder.py  test_recommendation_engine.py  test_report_builder.py  test_repository.py  test_tax_optimizer.py  test_tax_optimizer_real.py  test_technical_indicators.py  test_telegram.py
velodna/: .gitignore  CLAUDE.md  README.md  pyproject.toml
velodna/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
velodna/dags/: fit_sync_dag.py  health_sync_dag.py  injury_risk_dag.py
velodna/data/: velodna.duckdb.wal
velodna/dbt/: dbt_project.yml
velodna/dbt/models/: athlete_profile.sql  weekly_summary.sql
velodna/docs/: adr.md  schema.sql  user_stories.md
velodna/docs/adr/: ADR-001-duckdb.md  ADR-002-ollama-local-ai.md
velodna/docs/architecture/: erd.md  system-flow.md
velodna/docs/user-stories/: user-stories.md
velodna/frontend/: package-lock.json  package.json  vite.config.js
velodna/frontend/src/: App.jsx
velodna/scripts/: import_history.py
velodna/src/ai/: context_builder.py  injury_risk_coach.py  ollama_client.py  post_activity_coach.py  weekly_plan_coach.py
velodna/src/analytics/: mlflow_tracker.py  pmc_calculator.py  power_curve_engine.py  wprime_model.py  zone_analyzer.py
velodna/src/api/: dependencies.py  main.py
velodna/src/health/: hrv_trend.py  overreaching_alerts.py  readiness.py  sleep_correlator.py
velodna/src/ingestion/: catalog_store.py  fit_parser.py  garmin_health_client.py  gpx_loader.py  pipeline.py  strava_client.py
velodna/src/routes/: gpx_analyzer.py  (+3 more)
(+347 files in other folders)
