[project]
name = "crypto-advisor"
version = "0.1.0"
description = "AI-powered crypto swing trading advisor with tax optimization for Brazilian market"
requires-python = ">=3.11"
dependencies = [
    # Core AI
    "anthropic>=0.40.0",
    # Data & validation
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # Technical analysis
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Notification
    "python-telegram-bot>=21.0",
    # Reporting
    "jinja2>=3.1.0",
    # UI
    "streamlit>=1.35.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Terminal output
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
