[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velodna"
version = "0.1.0"
description = "Cycling Performance Platform"
requires-python = ">=3.11"
dependencies = [
    # Data ingestion — cycling file formats
    "fitparse>=1.0.2",
    "gpxpy>=1.6.2",
    "stravalib>=1.5",
    "garminconnect>=0.2.22",

    # Data layer
    "duckdb>=0.10.3",
    "pandas>=2.2",
    "numpy>=1.26",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",

    # Analytics / ML
    "scipy>=1.13",
    "scikit-learn>=1.5",

    # HTTP client (used by stravalib / garminconnect)
    "httpx>=0.27",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",      # TestClient do FastAPI
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
